--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h2>Level 2 begins</h2>
+    <p>It is great that thinks are going the right direction</p>
   </body>
 </html>
