--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h2>Level 2 begins</h2>
     <p>It is great that thinks are going the right direction</p>
+    <p>It is fun working as a group</p>
   </body>
 </html>
