--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Level 2 begins</h2>
     <p>It is great that thinks are going the right direction</p>
     <p>It is fun working as a group</p>
+    <h4>How do see this?</h4>
   </body>
 </html>
